--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,12 @@
 
 h1 {
   color: white;
+  border-bottom: 5px inset #f66;
+}
+
+img {
+  width: 5rem;
+  height: 5rem;
 }
 
 body {
@@ -19,7 +25,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 2px solid darkslategray;
+  border: 2px inset#CC5151;
   border-radius: 20px;
   padding: 5px;
 }
