--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,12 +2,13 @@
 
 h1 {
   color: white;
-  border-bottom: 5px inset #f66;
+  font-size: 7rem;
+  border-bottom: 0.5rem inset #f66;
 }
 
 img {
-  width: 5rem;
-  height: 5rem;
+  width: 10rem;
+  height: 10rem;
 }
 
 body {
@@ -24,8 +25,9 @@ body {
   width: 90%;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   align-items: center;
-  border: 2px inset#CC5151;
+  border: 0.3rem inset#CC5151;
   border-radius: 20px;
   padding: 5px;
 }
@@ -38,12 +40,26 @@ body {
 }
 
 button {
-  margin-top: 5px;
+  width: 10rem;
+  height: 4rem;
+  font-size: 2rem;
+  margin-top: 1rem;
   letter-spacing: 1px;
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
+  border: 0.19rem solid black;
+  border-radius: 1.15rem;
+  background-color: white;
   color: black;
-  border: 1px solid grey;
-  border-radius: 20px;
+}
+
+button:hover {
+  background-color: darkgray;
+  color: white;
+}
+
+button:active {
+  background-color: #282c34;
+  color: white;
 }
